# serialib-data-sender

./: client.py  compileVS.bat  detect.py  main.py
lib-test/: CMakeLists.txt
lib-test/lib/: seriallib.cpp  seriallib.h
lib-test/src/: main.cpp  server.h
lib-test/src/ard/: test.ino
lib-test/src/ard/test/: test.ino
